bugia risolto (alla buona) con z-index

--- a/css/style.css
+++ b/css/style.css
@@ -156,3 +156,7 @@ h6{
     background-color: rgb(214, 214, 214);;
     border-radius: 2rem;
 }
+
+.modal-backdrop{
+    z-index: 100;
+}
